k8s/istio/canary-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service-v2
  namespace: truxify
  labels:
    app: api
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      version: v2
  template:
    metadata:
      labels:
        app: api
        version: v2
    spec:
      containers:
      - name: api
        image: ghcr.io/kanishjebamathewm/truxify-api:canary
        ports:
        - containerPort: 5000
