k8s/istio/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-db-cluster
  namespace: truxify-production
spec:
  hosts:
  - db.external.truxify.com
  ports:
  - number: 3306
    name: mysql
    protocol: TCP
  - number: 5432
    name: postgresql
    protocol: TCP
  resolution: DNS
  location: MESH_EXTERNAL
